# radiation-benchmarks

./: .gitignore  .gitmodules  README  README.md  create_time_server_ntp  set_date_timezone.txt  update_submodule.sh
CLAMR/logHelper/: CMakeLists.txt  logHelper.c
src/cuda/accl/: CMakeLists.txt  Makefile  accl.cu  accl.h  accl_generate.cpp  accl_main.cpp  config_accl.py  config_k40.py  image.h  makefile  misc.h
src/cuda/accl/src/: Parameters.cpp  Parameters.h  accl.cu  accl.h  image.h  main.cpp  misc.h  utils.h
src/cuda/cache/: CMakeLists.txt  Makefile  config_cache.py  generate_reg_kernel.py
src/cuda/cache/include/: NVMLWrapper.h
src/cuda/cache/src/: CacheLine.h  CacheProfiler.cpp  CacheProfiler.h  L1Cache.h  L2Cache.h  Log.h  Memory.h  NVMLWrapper.cpp  NVMLWrapper.h  Parameters.cpp  Parameters.h  ReadOnly.h  RegisterFile.h  SharedMemory.h  cache.cu  cupti_profiler.h  device_functions.h  kernels.cu  kernels.h  l1_cache_kernels.cu  l1_move_function.h  l2_cache_kernels.cu  main.cpp  read_only_cache_kernels.cu  register_file_kernels.cu  register_kernel.h  register_kernel_volta.h  shared_memory_kernels.cu  utils.cpp  utils.h
src/cuda/common/: .cproject  CMakeLists.txt  Makefile  README.md
src/cuda/common/include/: JTX2Inst.h  NVMLWrapper.h  Profiler.h  cuda_utils.h  device_vector.h  generic_log.h  multi_compiler_analysis.h  persistent_lib.h
src/cuda/common/safe_memory/: safe_memory.cpp  safe_memory.h
src/cuda/common/src/: JTX2Inst.cpp  NVMLWrapper.cpp
src/cuda/common/src/jtx2/example/: Makefile  sample.cpp  sample_jtx2  testProfiler.csv
src/cuda/common/src/jtx2/include/: jtx1inst.h
src/cuda/common/src/jtx2/src/: jtx1pow.cpp  jtx1rate.cpp  jtx1temp.cpp
src/cuda/hotspot/: CMakeLists.txt  Makefile  config.py  config_hotspot.py  config_k1.py  config_k40.py  config_x2.py  cuda_hotspot.cu  hotspot.cu  hotspot_generate  makefile
src/cuda/hotspot/inputGen/: Makefile  hotspotex  hotspotver
src/heterogeneous/hsa_rmt/src/hsa/: 1000_34.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/heterogeneous/hsa_rmt/src/hsa/fir_inter_beam/: CMakeLists.txt  Makefile  cmake_install.cmake  config.py  fir_benchmark.cc  fir_benchmark.h  fir_inter_beam  kernels.cl  kernels.h  main.cc  run_fir_inter_beam_2048.sh  run_fir_inter_beam_4096.sh  run_fir_inter_beam_8192.sh
src/heterogeneous/hsa_rmt/src/hsa/fir_inter_errinj/: CMakeLists.txt  Makefile  cmake_install.cmake  fir_benchmark.h  fir_inter_errinj  kernels.cl  kernels.h  main.cc
src/heterogeneous/hsa_rmt/src/hsa/fir_intra_beam/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  config.py  fir_benchmark.cc  fir_benchmark.h  fir_intra_beam  kernels.cl  kernels.h  main.cc  run_fir_intra_beam_2048.sh  run_fir_intra_beam_4096.sh  run_fir_intra_beam_8192.sh
src/heterogeneous/hsa_rmt/src/hsa/fir_intra_errinj/: CMakeLists.txt  Makefile  cmake_install.cmake  config.py  fir_benchmark.cc  fir_intra_errinj  kernels.h  kernels_brig.h  main.cc
src/heterogeneous/hsa_rmt/src/hsa/kmeans_inter_beam/: CMakeLists.txt  Makefile  cmake_install.cmake  config.py  kernels.cl  kmeans_benchmark.cc  kmeans_benchmark.h  kmeans_inter_beam  main.cc  run_kmeans_inter_beam_100000.sh  run_kmeans_inter_beam_30000.sh  run_kmeans_inter_beam_300000.sh
src/heterogeneous/hsa_rmt/src/hsa/kmeans_inter_errinj/: CMakeLists.txt  Makefile  cmake_install.cmake  kernels.h  kmeans_inter_errinj
src/heterogeneous/hsa_rmt/src/hsa/kmeans_intra_beam/: CMakeLists.txt  Makefile  cmake_install.cmake  config.py  kernels.h  kmeans_benchmark.cc  kmeans_benchmark.h  kmeans_intra_beam  main.cc  run_kmeans_intra_beam_100000.sh  run_kmeans_intra_beam_30000.sh  run_kmeans_intra_beam_300000.sh
src/heterogeneous/hsa_rmt/src/hsa/kmeans_intra_errinj/: CMakeLists.txt  Makefile  cmake_install.cmake  kernels.cl  kmeans_benchmark.cc  kmeans_benchmark.h  kmeans_intra_errinj
src/heterogeneous/hsa_rmt/src/hsa/matmul_hsa/: cmake_install.cmake  main.cc  matmul_benchmark.h
src/heterogeneous/hsa_rmt/src/hsa/page_rank_inter_beam/: CMakeLists.txt  Makefile  cmake_install.cmake  config.py  csr_2048_10.txt  kernels.cl  kernels.h  main.cc  page_rank_benchmark.cc  page_rank_benchmark.h  page_rank_inter_beam  run_page_rank_inter_beam_2048.sh  run_page_rank_inter_beam_3072.sh  run_page_rank_inter_beam_4096.sh
src/heterogeneous/hsa_rmt/src/hsa/page_rank_inter_errinj/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  kernels.h  page_rank_benchmark.cc  (+2 more)
src/include/: CMakeLists.txt  Makefile  README  common_config.py  helper_cuda.h  helper_sorts.cu  helper_sorts.h  helper_string.h  helpful.h  log_helper.c  log_helper.cu  log_helper.h  log_helper_local.cu  log_helper_sockclient.c  log_helper_sockserver.c  log_parser.sh  makefile
src/include/example_log/: CMakeLists.txt  Makefile  example_log.c  makefile
src/include/lhl/: log_helper_local.c  log_helper_local.h
src/include/log_helper_python/: Makefile  log_helper.c  log_helper.i  log_helper.py
src/include/log_helper_swig_wraper/: Makefile  log_helper_wrap.c
src/include/md5/: md5.c
src/include/safe_memory/: Makefile  safe_memory.cpp  safe_memory.h
(+2925 files in other folders)
